tests/specs/ecosystem/sylc/step_spinner/0_0_2.test
sylc/step-spinner/0.0.2
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@std/cli@0.224.0": "jsr:@std/cli@0.224.0"
    },
    "jsr": {
      "@std/cli@0.224.0": {
        "integrity": "2612373d68984637bdad8b9c9dd160e9838ac2a6d463354d537d2897a7cc6d1c"
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Spinner'.
  start(): StepSpinner {
  ~~~~~
    at file://<tmpdir>/StepSpinner.ts:11:3

TS4114 [ERROR]: This member must have an 'override' modifier because it overrides a member in the base class 'Spinner'.
  stop(): void {}
  ~~~~
    at file://<tmpdir>/StepSpinner.ts:14:3

Found 2 errors.

